@@ -1,5 +1,7 @@
 package com.ahmed.Hadidy.security;
 
+import lombok.AllArgsConstructor;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -10,59 +12,41 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
+@AllArgsConstructor
 public class SecurityConfig {
+
+    @Qualifier("publicPaths")
+    private final List<String> publicPath;
+
+    @Qualifier("securePaths")
+    private final List<String> securePath;
 
     @Bean
     SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
-        http
-                .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        http.authorizeHttpRequests(auth ->
+                {
+                    publicPath.forEach(pp -> auth.requestMatchers(pp).permitAll());
+                    securePath.forEach(sp -> auth.requestMatchers(sp).authenticated());
+                    auth.anyRequest().denyAll();
+                }
+        );
 
-                .authorizeHttpRequests(auth -> auth
+        // CORS
+        http.cors(config ->
+                config.configurationSource(corsConfigurationSource()));
+        // csrf
 
-                        .requestMatchers(
-                                "/",
-                                "/*.html"
-                        ).permitAll()
-                        // files static
-                        .requestMatchers(
-                                "/images/**",
-                                "/api.js",
-                                "/style.css",
-                                "/favicon.ico"
-                        ).permitAll()
 
-                        .requestMatchers(
-                                "/images/**",
-                                "/api.js",
-                                "/style.css",
-                                "/favicon.ico",
-                                "/apple-touch-icon*.png",
-                                "/*.png",
-                                "/*.ico"
-                        ).permitAll()
-                        // Swagger
-                        .requestMatchers(
-                                "/ahmed-ui.html",
-                                "/swagger-ui/**",
-                                "/v3/api-docs/**",
-                                "/my-api-docs/**"
-                        ).permitAll()
-
-                        // APIs general
-                        .requestMatchers("/api/users/register").permitAll()
-
-                        .anyRequest().authenticated()
-                )
-
-                .httpBasic(withDefaults());
-
+        http.httpBasic(withDefaults());
+        http.formLogin(form -> form.disable());
         return http.build();
     }
 
@@ -74,19 +58,17 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(
-                "http://localhost:3000",
-                "http://localhost:5173",
-                "http://127.0.0.1:5500",
-                "http://localhost:5500",
-                "https://gymtracker-production-450e.up.railway.app"
-        ));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+        configuration.setAllowedMethods(Collections.singletonList("*"));
+        configuration.setAllowedHeaders(Collections.singletonList("*"));
+
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 }
